alignment fixed for dashboard

--- a/src/App.scss
+++ b/src/App.scss
@@ -656,3 +656,6 @@ background-color:whitesmoke;
     font-size:15px;
 
   }
+  .div-head{
+    margin-left:70px;
+  }
